# tema

./: .gitignore  README.md  pyproject.toml
src/tema/: __init__.py  __main__.py  cli.py  core.py  state.py  utils.py
src/tema/providers/: __init__.py  base.py  burner.py  emailmux.py  emailnator.py  etempmail.py  privatix.py  smailpro.py  tempmaili.py
tests/: test_providers.py
