[project]
name = "tema"
version = "0.1.0"
description = "Multi-provider temporary email CLI with real domains (gmail, outlook, edu)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["email", "temporary", "disposable", "gmail", "outlook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
cf = ["curl_cffi>=0.5"]

[project.urls]
Homepage = "https://github.com/TheQmaks/tema"
Repository = "https://github.com/TheQmaks/tema"
Issues = "https://github.com/TheQmaks/tema/issues"

[project.scripts]
tema = "tema.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tema"]

[tool.mypy]
mypy_path = "src"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
